WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45332
gl-teximage fails on chrome mac bot
https://bugs.webkit.org/show_bug.cgi?id=45332
Summary
gl-teximage fails on chrome mac bot
Zhenyao Mo
Reported
2010-09-07 15:58:51 PDT
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#useWebKitCanary=true&tests=fast%2Fcanvas%2Fwebgl%2Fgl-teximage.html
Attachments
patch
(7.96 KB, patch)
2010-09-24 16:36 PDT
,
Zhenyao Mo
kbr
: review+
zmo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-09-07 16:04:28 PDT
Add the test to test_expectations.txt (see
r66922
).
Kenneth Russell
Comment 2
2010-09-07 16:08:38 PDT
This test passes on my Snow Leopard machine, so I assume that Leopard (which the bot is running) is doing something different with the image data. The test output indicates that the color channels are swapped, so we are probably misinterpreting the image data obtained from CGImageGetDataProvider / CGDataProviderCopyData. I suspect we need to call CGImageGetBitmapInfo and pay attention to the byte order bits.
Zhenyao Mo
Comment 3
2010-09-07 16:32:55 PDT
If you don't mind, I'd like to take this bug since it's originally my code.
Kenneth Russell
Comment 4
2010-09-07 16:33:59 PDT
(In reply to
comment #3
)
> If you don't mind, I'd like to take this bug since it's originally my code.
Thanks, I definitely appreciate that.
Zhenyao Mo
Comment 5
2010-09-24 16:36:21 PDT
Created
attachment 68790
[details]
patch It's confirmed that in Mac OS 10.5 (possibly up to Mac OS 10.6.3), CG's decoder outputs alpha-first pixel format, and from 10.6.4, it's alpha last pixel formats. This patch adds path to deal with alpha first formats. Tested on 10.5 machine.
Kenneth Russell
Comment 6
2010-09-24 19:22:53 PDT
Comment on
attachment 68790
[details]
patch Looks good.
Zhenyao Mo
Comment 7
2010-09-27 10:02:10 PDT
Committed
r68399
: <
http://trac.webkit.org/changeset/68399
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug