2010-09-24  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        gl-teximage fails on chrome mac bot
        https://bugs.webkit.org/show_bug.cgi?id=45332

        Add support for alpha first pixel formats.

        * platform/graphics/GraphicsContext3D.cpp:
        (WebCore::doPacking):
        * platform/graphics/GraphicsContext3D.h:
        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData):
2010-09-24  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        gl-teximage fails on chrome mac bot
        https://bugs.webkit.org/show_bug.cgi?id=45332

        * platform/chromium/test_expectations.txt: Re-enabling gl-textimage.html with the fix.


Canonical link: https://commits.webkit.org/59089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68399 268f45cc-cd09-0410-ab3c-d52691b4dbfc