WebCore/platform/graphics/GraphicsContext3D.h
@@ -537,11 +537,13 @@ public:
         kSourceFormatRGBA8,
         kSourceFormatRGB8,
         kSourceFormatBGRA8,
+        kSourceFormatARGB8,
         kSourceFormatRGBA5551,
         kSourceFormatRGBA4444,
         kSourceFormatRGB565,
         kSourceFormatR8,
         kSourceFormatRA8,
+        kSourceFormatAR8,
         kSourceFormatA8
     };
 
